[tool.poetry]
name = "api-blog"
version = "0.1.0"
description = ""
authors = ["Stephen Kettley <kettleystephen@gmail.com>"]
readme = "README.md"
packages = [{include = "api_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
